c/examples/writing-a-c-compiler-tests/tests/chapter_12/valid/unsigned_expressions/simple.c
/* A simple arithmetic test case */

int main(void) {
    unsigned u = 2147483647u;
    return (u + 2u == 2147483649u);
}