c/examples/writing-a-c-compiler-tests/tests/chapter_12/invalid_types/conflicting_signed_unsigned.c
/* Cannot declare x as both signed int and unsigned int */

unsigned x;

int x;

int main(void) {
    return 0;
}